feat: Se agrega Mapper y se omite try/catch mediante Global Handler